Style dark theme see Changelog.md

--- a/Core/MVVM/View/ChartPageView.xaml
+++ b/Core/MVVM/View/ChartPageView.xaml
@@ -19,56 +19,54 @@
         </Grid.ColumnDefinitions>
         <ScottPlot:WpfPlot x:Name="WpfPlot1"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto"  Grid.Column="1" HorizontalAlignment="Stretch">
-            <Border   BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  >
+            <Border   Style="{StaticResource MainBorderTheme}" >
 
                 <StackPanel  >
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+                    <Border  Style="{StaticResource InnerBorderTheme}">
                         <StackPanel>
                             <Label Content="{DynamicResource From}" HorizontalAlignment="Center"/>
-                            <Label Content="{Binding From}"/>
+                            <Label Content="{Binding From}" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+                    <Border Style="{StaticResource InnerBorderTheme}">
                         <StackPanel>
                             <Label Content="{DynamicResource To}" HorizontalAlignment="Center"/>
-                            <Label Content="{Binding To}"/>
+                            <Label Content="{Binding To}" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+                    <Border  Style="{StaticResource InnerBorderTheme}">
                         <StackPanel>
                             <Label Content="{DynamicResource CountPoint}" HorizontalAlignment="Center"/>
-                            <TextBox Text="{Binding CountPoint, UpdateSourceTrigger=PropertyChanged}" BorderBrush="Transparent" Background="LightGray"/>
+                            <TextBox Text="{Binding CountPoint, UpdateSourceTrigger=PropertyChanged}" MinWidth="50" HorizontalAlignment="Center" BorderBrush="Transparent" />
 
                         </StackPanel>
                     </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
-                        <ComboBox ItemsSource="{Binding ChartType}" SelectedItem="{Binding SelectedChartType}" />
-                    </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+                    <ComboBox Margin="5" ItemsSource="{Binding ChartType}" SelectedItem="{Binding SelectedChartType}" Style="{StaticResource ComboBoxTest2}" />
+
+                    <Border  Style="{StaticResource InnerBorderTheme}">
                         <StackPanel>
                             <Label Content="{DynamicResource Valute}" HorizontalAlignment="Center"/>
-                            <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
-                                <ComboBox ItemsSource="{Binding Valutes}" SelectedItem="{Binding SelectedValutes}" />
-                            </Border>
+                            <ComboBox Margin="10" ItemsSource="{Binding Valutes}" SelectedItem="{Binding SelectedValutes}" Style="{StaticResource ComboBoxTest2}" />
+
                         </StackPanel>
                     </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
-                        <StackPanel>
+                    <Border Style="{StaticResource InnerBorderTheme}">
+                        <StackPanel Margin="10">
                             <RadioButton IsChecked="{Binding IsDay}" Content="{DynamicResource DayPair}" GroupName="Chart"/>
                             <RadioButton IsChecked="{Binding IsHour}" Content="{DynamicResource HourPair}" GroupName="Chart"/>
                             <RadioButton IsChecked="{Binding IsMinute}" Content="{DynamicResource MinutePair}" GroupName="Chart"/>
                         </StackPanel>
                     </Border>
-                    <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+                    <Border Style="{StaticResource InnerBorderTheme}">
                         <StackPanel>
                             <Label  FontSize="15" Content="{DynamicResource Show}" HorizontalAlignment="Center"/>
-                            <Button Background="Transparent" BorderBrush="Transparent" Command="{Binding Volume}">
+                            <Button Margin="5" Command="{Binding Volume}">
                                 <StackPanel Orientation="Horizontal">
                                     <Label  FontSize="15" Content="{DynamicResource Volume}"/>
                                     <Image Source="/Image/Icons/Refresh.png" />
                                 </StackPanel>
                             </Button>
-                            <Button Background="Transparent" BorderBrush="Transparent" Command="{Binding Default}">
+                            <Button Margin="5" Command="{Binding Default}">
                                 <StackPanel Orientation="Horizontal">
                                     <Label  FontSize="15" Content="{DynamicResource Default}"/>
                                     <Image Source="/Image/Icons/Refresh.png" />
@@ -76,13 +74,13 @@
                             </Button>
                         </StackPanel>
                     </Border>
-                    <Button Background="Transparent" BorderBrush="Transparent" Command="{Binding Update}">
+                    <Button Command="{Binding Update}">
                         <StackPanel Orientation="Horizontal">
                             <Label  FontSize="15" Content="{DynamicResource Update}"/>
                             <Image Source="/Image/Icons/Refresh.png" />
                         </StackPanel>
                     </Button>
-                    <Button Background="Transparent" BorderBrush="Transparent" Command="{Binding Back}">
+                    <Button  Command="{Binding Back}">
                         <StackPanel Orientation="Horizontal">
                             <Label  FontSize="15" Content="{DynamicResource Back}"/>
                             <Image Source="/Image/Icons/Back.png" />
