--- a/Core/MVVM/View/MoreInfoExchangesView.xaml
+++ b/Core/MVVM/View/MoreInfoExchangesView.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="507*"/>
             <ColumnDefinition Width="122*"/>
         </Grid.ColumnDefinitions>
-        <Border   BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="10">
+        <Border Style="{StaticResource MainBorderTheme}" Margin="10">
 
             <StackPanel   HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Image Source="{Binding Exchanges.Image}" Height="100"/>
@@ -31,7 +31,7 @@
             </StackPanel>
         </Border>
         <TextBox  TextWrapping="Wrap"   VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Exchanges.Description}" IsReadOnly="True" Grid.Column="1"/>
-        <Border   BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="5,5,5,5" Grid.Column="2">
+        <Border Style="{StaticResource MainBorderTheme}"  Margin="5" Grid.Column="2">
 
             <StackPanel HorizontalAlignment="Center"  >
 
