--- a/Core/MVVM/View/SettingPageView.xaml
+++ b/Core/MVVM/View/SettingPageView.xaml
@@ -11,31 +11,23 @@
     <Page.DataContext>
         <viewModel:SettingPageViewModel/>
     </Page.DataContext>
-    <Grid>
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="23*"/>
             <ColumnDefinition Width="77*"/>
         </Grid.ColumnDefinitions>
-        <Border   BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="0 0 20 0">
+        <Border Style="{StaticResource MainBorderTheme}" Margin="0 0 20 0">
             <StackPanel   HorizontalAlignment="Center">
-                <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" Background="#fffdd0" BorderThickness="2" CornerRadius="10" >
+                <Border  Margin="10" Style="{StaticResource MainBorderTheme}">
                     <StackPanel >
                         <Label Content="{DynamicResource Lang}" HorizontalAlignment="Center"/>
-                        <Border  Margin=" 5 5 5 5" BorderBrush="#f0b979" BorderThickness="2" CornerRadius="10">
-                            <StackPanel Orientation="Horizontal">
-                                <ComboBox MinWidth="100" ItemsSource="{Binding AllLang}" SelectedItem="{Binding SelectedLang}" />
-                            </StackPanel>
-                        </Border>
+                        <ComboBox MinWidth="100" ItemsSource="{Binding AllLang}" SelectedItem="{Binding SelectedLang}" Margin="10" Style="{StaticResource ComboBoxTest2}"/>
                     </StackPanel>
                 </Border>
-                <Border  Margin=" 5 5 5 5" BorderBrush="Bisque" Background="#fffdd0" BorderThickness="2" CornerRadius="10" >
+                <Border  Margin="10" Style="{StaticResource MainBorderTheme}" >
                     <StackPanel >
-                        <Label Content="{DynamicResource Theme}" HorizontalAlignment="Center"/>
-                        <Border  Margin=" 5 5 5 5" BorderBrush="#f0b979" BorderThickness="2" CornerRadius="10">
-                            <StackPanel Orientation="Horizontal">
-                                <ComboBox MinWidth="100" />
-                            </StackPanel>
-                        </Border>
+                        <Label Content="{DynamicResource Theme}" HorizontalAlignment="Center" />
+                        <ComboBox MinWidth="100"   Margin="10" Style="{StaticResource ComboBoxTest2}"/>
                     </StackPanel>
                 </Border>
             </StackPanel>
