--- a/Core/MVVM/View/TradePageView.xaml
+++ b/Core/MVVM/View/TradePageView.xaml
@@ -32,7 +32,7 @@
                 <ColumnDefinition Width="27*"/>
             </Grid.ColumnDefinitions>
             <ScrollViewer VerticalScrollBarVisibility="Auto">
-                <Border    BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="0 0 20 0">
+                <Border   Style="{StaticResource MainBorderTheme}" Margin="0 0 20 0">
                     <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center">
                         <StackPanel>
                             <UI:ShowPropertyCompnonet PropName="{DynamicResource Timestamp}" Value="{Binding SelectedTicker.Timestamp}"/>
@@ -98,17 +98,17 @@
             <Grid  Grid.Column="1">
                 <StackPanel Background="Transparent" Margin="0" Orientation="Vertical" >
 
-                    <Border    BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="10">
-                        <StackPanel Orientation="Horizontal" Margin="10 0 10 0" VerticalAlignment="Center">
+                    <Border Style="{StaticResource InnerBorderTheme}" CornerRadius="10"  Margin="10">
+                        <WrapPanel Orientation="Horizontal" Margin="10 0 10 0" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Label Content="{DynamicResource Base}"/>
-                            <ComboBox ItemsSource="{Binding BaseCoin}" SelectedItem="{Binding SelectedBaseCoin,UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
+                            <ComboBox  Style="{StaticResource ComboBoxTest2}" MinWidth="60" ItemsSource="{Binding BaseCoin}" SelectedItem="{Binding SelectedBaseCoin,UpdateSourceTrigger=PropertyChanged}"/>
+                        </WrapPanel>
                     </Border>
-                    <Border    BorderBrush="Bisque" Background="Beige" BorderThickness="2" CornerRadius="10"  Margin="10">
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 0 10 0">
+                    <Border Style="{StaticResource InnerBorderTheme}" CornerRadius="10"  Margin="10" >
+                        <WrapPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10 0 10 0"  HorizontalAlignment="Center">
                             <Label Content="{DynamicResource Target}" />
-                            <ComboBox ItemsSource="{Binding TargetCoin}" SelectedItem="{Binding SelectedTargetCoin,UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
+                            <ComboBox Style="{StaticResource ComboBoxTest2}"  MinWidth="60" ItemsSource="{Binding TargetCoin}" SelectedItem="{Binding SelectedTargetCoin,UpdateSourceTrigger=PropertyChanged}"/>
+                        </WrapPanel>
                     </Border>
                     <UI:ShowButtonComponent Header="{DynamicResource ClearFilter}" Image="/Image/Icons/ClearFilter.png" Command="{Binding ClearFilter}"/>
                     <UI:ShowButtonComponent Header="{DynamicResource ToTrade}" Image="/Image/Icons/Trade.png" Command="{Binding GoToTrade}"/>
