--- a/Core/UI/ShowPropertyCompnonet.xaml
+++ b/Core/UI/ShowPropertyCompnonet.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:NewCryptoApp.Core.UI"
              Name="showPropertyCompnonet"
              mc:Ignorable="d">
-    <Border  Margin="5" BorderBrush="Bisque" BorderThickness="2" CornerRadius="10">
+    <Border Style="{StaticResource InnerBorderTheme}" CornerRadius="10">
         <WrapPanel Orientation="Horizontal">
             <Label Content="{Binding PropName , ElementName=showPropertyCompnonet}"/>
             <Label Content="{Binding Value, ElementName=showPropertyCompnonet}"/>
